manifests/jupyterhub/jupyterhub/base/jupyterhub-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  labels:
    app: jupyterhub
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $(ACM_ARN)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: mlops-ingress-class
  rules:
  - host: $(JUPYTERHUB_HOST)
    http:
      paths:
      - backend:
          service:
            name: jupyterhub
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific  


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  host: $(JUPYTERHUB_HOST)
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub
    weight: 100
